Documented delete slots
